kubernetes/main/apps/monitoring/kube-prometheus-stack/app/networkpolicy.yaml
# ---
# TODO: Uncomment when applying netpols to KPS
# # yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
# apiVersion: cilium.io/v2
# kind: CiliumNetworkPolicy
# metadata:
#   name: kube-prometheus-stack
# spec:
#   description: Allow Prometheus to egress to pods labelled with metrics exporters, no port restrictions
#   endpointSelector:
#     matchLabels:
#       prometheus: kube-prometheus-stack
#   egress:
#     - toEndpoints:
#         - matchLabels:
#             prom.home.arpa/kps: allow
#           matchExpressions:
#             - key: io.kubernetes.pod.namespace
#               operator: Exists
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: kube-prometheus-stack-to-apps
spec:
  description: Allow Prometheus ingress on pods labelled with metrics exporters, no port restrictions
  endpointSelector:
    matchLabels:
      prom.home.arpa/kps: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            prometheus: kube-prometheus-stack
